增加搜索用户和番剧

--- a/app/src/main/res/layout/item_news_original_video.xml
+++ b/app/src/main/res/layout/item_news_original_video.xml
@@ -11,6 +11,7 @@
         android:layout_height="wrap_content"
         android:background="?android:attr/selectableItemBackground"
         android:clickable="true"
+        android:focusable="true"
         android:descendantFocusability="blocksDescendants"
         android:paddingLeft="20dp"
         android:paddingRight="20dp"
