--- a/app/src/main/res/layout/item_search_user.xml
+++ b/app/src/main/res/layout/item_search_user.xml
@@ -1,72 +1,73 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/oupp_lay"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="2dp"
-    android:paddingLeft="20dp"
-    android:paddingRight="20dp"
-    android:paddingTop="2dp"
+    android:descendantFocusability="blocksDescendants"
     android:background="?android:attr/selectableItemBackground"
     android:clickable="true"
-    android:focusable="true">
+    android:focusable="true"
+    android:paddingBottom="1dp"
+    android:paddingLeft="19dp"
+    android:paddingRight="19dp"
+    android:paddingTop="1dp">
 
     <de.hdodenhof.circleimageview.CircleImageView
-        android:id="@+id/oupp_face"
+        android:id="@+id/item_search_user_face"
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:src="@drawable/img_default_head" />
 
     <de.hdodenhof.circleimageview.CircleImageView
-        android:id="@+id/oupp_ver_1"
+        android:id="@+id/item_search_user_ver_1"
         android:layout_width="15dp"
         android:layout_height="15dp"
-        android:layout_alignBottom="@+id/oupp_face"
-        android:layout_alignRight="@+id/oupp_face"
+        android:layout_alignBottom="@+id/item_search_user_face"
+        android:layout_alignEnd="@+id/item_search_user_face"
         android:layout_marginBottom="-2dp"
-        android:layout_marginRight="-2dp"
+        android:layout_marginEnd="-2dp"
         android:src="@drawable/icon_ou_ver_1"
         android:visibility="gone" />
 
     <de.hdodenhof.circleimageview.CircleImageView
-        android:id="@+id/oupp_ver_2"
+        android:id="@+id/item_search_user_ver_2"
         android:layout_width="15dp"
         android:layout_height="15dp"
-        android:layout_alignBottom="@+id/oupp_face"
-        android:layout_alignRight="@+id/oupp_face"
+        android:layout_alignBottom="@+id/item_search_user_face"
+        android:layout_alignEnd="@+id/item_search_user_face"
         android:layout_marginBottom="-2dp"
-        android:layout_marginRight="-2dp"
+        android:layout_marginEnd="-2dp"
         android:src="@drawable/icon_ou_ver_2"
         android:visibility="gone" />
 
     <TextView
-        android:id="@+id/oupp_name"
+        android:id="@+id/item_search_user_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="4dp"
-        android:layout_toRightOf="@+id/oupp_face"
+        android:layout_marginStart="4dp"
+        android:layout_toEndOf="@+id/item_search_user_face"
         android:textColor="@color/gray_44"
+        android:textSize="13sp"
         android:textStyle="bold" />
 
     <TextView
-        android:id="@+id/oupp_sign"
+        android:id="@+id/item_search_user_sign"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/oupp_name"
-        android:layout_marginLeft="4dp"
-        android:layout_toRightOf="@+id/oupp_face"
+        android:layout_below="@+id/item_search_user_name"
+        android:layout_marginStart="4dp"
+        android:layout_toEndOf="@+id/item_search_user_face"
         android:ellipsize="end"
         android:singleLine="true"
         android:textColor="@color/gray_44"
         android:textSize="11sp" />
 
     <TextView
-        android:id="@+id/oupp_time"
+        android:id="@+id/item_search_user_desc"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/oupp_sign"
-        android:layout_marginLeft="4dp"
-        android:layout_toRightOf="@+id/oupp_face"
+        android:layout_below="@+id/item_search_user_sign"
+        android:layout_marginStart="4dp"
+        android:layout_toEndOf="@+id/item_search_user_face"
         android:ellipsize="end"
         android:singleLine="true"
         android:textSize="10sp" />
