--- a/app/src/main/res/layout/item_search_bangumi.xml
+++ b/app/src/main/res/layout/item_search_bangumi.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/item_search_bangumi_lay"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:descendantFocusability="blocksDescendants"
@@ -33,7 +34,6 @@
             android:layout_height="wrap_content"
             android:ellipsize="end"
             android:lines="2"
-            android:text="我的青春恋爱物语果然有问题。"
             android:textColor="@color/gray_44"
             android:textSize="13sp" />
 
@@ -43,7 +43,6 @@
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:layout_below="@+id/item_search_bangumi_title"
-            android:text="9.8"
             android:textColor="@color/orange"
             android:textSize="15sp"
             android:textStyle="bold" />
@@ -51,9 +50,9 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignStart="@+id/item_search_bangumi_score"
             android:layout_alignParentStart="true"
             android:layout_below="@+id/item_search_bangumi_title"
+            android:layout_toLeftOf="@+id/item_search_bangumi_score"
             android:orientation="vertical">
 
             <TextView
@@ -62,7 +61,6 @@
                 android:layout_height="wrap_content"
                 android:ellipsize="end"
                 android:maxLines="1"
-                android:text="2015 | 日本"
                 android:textSize="11sp" />
 
             <TextView
@@ -70,7 +68,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="共13集"
                 android:textSize="11sp" />
 
         </LinearLayout>
