--- a/app/src/main/res/layout/viewpager_bangumi_detail.xml
+++ b/app/src/main/res/layout/viewpager_bangumi_detail.xml
@@ -41,7 +41,7 @@
                     android:id="@+id/bgm_detail_score"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:paddingRight="6dp"
+                    android:paddingEnd="6dp"
                     android:textColor="@color/orange"
                     android:textSize="12sp" />
 
@@ -49,28 +49,28 @@
                     android:id="@+id/bgm_detail_play"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:paddingRight="6dp"
+                    android:paddingEnd="6dp"
                     android:textSize="12sp" />
 
                 <TextView
                     android:id="@+id/bgm_detail_like"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:paddingRight="6dp"
+                    android:paddingEnd="6dp"
                     android:textSize="12sp" />
 
                 <TextView
                     android:id="@+id/bgm_detail_series"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:paddingRight="6dp"
+                    android:paddingEnd="6dp"
                     android:textSize="12sp" />
 
                 <TextView
                     android:id="@+id/bgm_detail_needvip"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:paddingRight="6dp"
+                    android:paddingEnd="6dp"
                     android:textSize="12sp" />
 
                 <TextView
@@ -94,8 +94,8 @@
                     <LinearLayout
                         android:layout_width="55dp"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="20dp"
-                        android:layout_marginRight="2dp"
+                        android:layout_marginStart="20dp"
+                        android:layout_marginEnd="2dp"
                         android:background="?android:attr/selectableItemBackground"
                         android:clickable="true"
                         android:descendantFocusability="blocksDescendants"
@@ -123,7 +123,7 @@
                     <LinearLayout
                         android:layout_width="55dp"
                         android:layout_height="wrap_content"
-                        android:layout_marginRight="2dp"
+                        android:layout_marginEnd="2dp"
                         android:background="?android:attr/selectableItemBackground"
                         android:clickable="true"
                         android:descendantFocusability="blocksDescendants"
@@ -149,7 +149,7 @@
                     <LinearLayout
                         android:layout_width="55dp"
                         android:layout_height="wrap_content"
-                        android:layout_marginRight="2dp"
+                        android:layout_marginEnd="2dp"
                         android:background="?android:attr/selectableItemBackground"
                         android:clickable="true"
                         android:descendantFocusability="blocksDescendants"
@@ -167,7 +167,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="6dp"
-                            android:text="缓存番剧"
+                            android:text="缓存"
                             android:textSize="12sp" />
 
                     </LinearLayout>
@@ -175,7 +175,7 @@
                     <LinearLayout
                         android:layout_width="55dp"
                         android:layout_height="wrap_content"
-                        android:layout_marginRight="20dp"
+                        android:layout_marginEnd="20dp"
                         android:background="?android:attr/selectableItemBackground"
                         android:clickable="true"
                         android:descendantFocusability="blocksDescendants"
@@ -193,7 +193,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="6dp"
-                            android:text="转发番剧"
+                            android:text="转发"
                             android:textSize="12sp" />
 
                     </LinearLayout>
@@ -214,14 +214,16 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center_vertical"
-                    android:paddingLeft="21dp"
-                    android:paddingRight="16dp">
+                    android:paddingStart="21dp"
+                    android:paddingEnd="16dp">
 
                     <TextView
                         android:id="@+id/bgm_detail_video_part_text"
-                        android:layout_width="wrap_content"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
+                        android:lines="1"
+                        android:ellipsize="end"
                         android:textColor="@color/gray_44"
                         android:textSize="13sp" />
 
@@ -261,14 +263,16 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center_vertical"
-                    android:paddingLeft="21dp"
-                    android:paddingRight="16dp">
+                    android:paddingStart="21dp"
+                    android:paddingEnd="16dp">
 
                     <TextView
                         android:id="@+id/bgm_detail_video_other_text"
-                        android:layout_width="wrap_content"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
+                        android:lines="1"
+                        android:ellipsize="end"
                         android:textColor="@color/gray_44"
                         android:textSize="13sp" />
 
@@ -308,7 +312,7 @@
 
                 <LinearLayout
                     android:id="@+id/bgm_detail_video_season"
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:divider="@color/alpha"
                     android:dividerPadding="4dp"
