--- a/app/src/main/res/layout/widget_ranking_pickup.xml
+++ b/app/src/main/res/layout/widget_ranking_pickup.xml
@@ -1,36 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/rk_pu_lay"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/ranking_rank_1_start"
     android:paddingLeft="19dp"
     android:paddingRight="19dp"
-    android:paddingTop="4dp">
+    android:paddingTop="4dp"
+    android:visibility="visible">
 
-    <LinearLayout
+    <RelativeLayout
         android:id="@+id/rk_pu_date"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center"
-        android:orientation="horizontal">
+        android:gravity="center_vertical"
+        android:orientation="horizontal"
+        android:clickable="true"
+        android:focusable="true">
 
         <TextView
             android:id="@+id/rk_pu_date_date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
             android:ellipsize="end"
             android:lines="1"
-            android:text="1月13日"
             android:textStyle="bold" />
 
         <ImageView
-            android:layout_width="75dp"
-            android:layout_height="16dp"
-            android:layout_marginStart="6dp"
-            android:layout_marginTop="1dp"
+            android:id="@+id/rk_pu_date_pk"
+            android:layout_width="68dp"
+            android:layout_height="20dp"
+            android:layout_alignParentRight="true"
+            android:layout_marginEnd="8dp"
             android:src="@drawable/img_ranking_pickup" />
-    </LinearLayout>
+
+        <TextView
+            android:id="@+id/rk_pu_date_click"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="4dp"
+            android:layout_toLeftOf="@+id/rk_pu_date_pk"
+            android:background="@drawable/shape_anre_followbg"
+            android:padding="2dp"
+            android:text="点这里 >"
+            android:textColor="@color/white"
+            android:textSize="12sp"
+            android:visibility="gone" />
+
+    </RelativeLayout>
 
     <LinearLayout
         android:id="@+id/rk_pu_video_up"
@@ -53,7 +71,6 @@
             android:layout_marginLeft="2dp"
             android:layout_weight="1"
             android:gravity="center_vertical"
-            android:text="luern0313"
             android:textSize="12sp" />
     </LinearLayout>
 
@@ -82,28 +99,32 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:ellipsize="end"
-            android:maxLines="2"
-            android:text="哔哩哔哩2019拜年祭"
+            android:lines="2"
             android:textColor="@color/gray_44"
             android:textSize="13sp" />
 
-        <TextView
-            android:id="@+id/rk_pu_video_play"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:ellipsize="end"
-            android:maxLines="1"
-            android:text="播放：32.2亿"
-            android:textSize="10sp" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/rk_pu_video_score"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:ellipsize="end"
-            android:maxLines="1"
-            android:text="啊啊啊啊啊啊"
-            android:textSize="9sp" />
+            <TextView
+                android:id="@+id/rk_pu_video_play"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:ellipsize="end"
+                android:maxLines="1"
+                android:textSize="10sp" />
+
+            <TextView
+                android:id="@+id/rk_pu_video_danmaku"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="4dp"
+                android:ellipsize="end"
+                android:maxLines="1"
+                android:textSize="10sp" />
+        </LinearLayout>
 
     </LinearLayout>
 
