--- a/app/src/main/res/layout/widget_ranking_pickup.xml
+++ b/app/src/main/res/layout/widget_ranking_pickup.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/rk_pu_lay"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:paddingLeft="19dp"
     android:paddingRight="19dp"
     android:paddingTop="4dp"
-    android:visibility="visible">
+    android:visibility="visible"
+    android:background="?android:attr/selectableItemBackground">
 
     <RelativeLayout
         android:id="@+id/rk_pu_date"
@@ -45,7 +45,7 @@
             android:padding="2dp"
             android:text="点这里 >"
             android:textColor="@color/white"
-            android:textSize="12sp"
+            android:textSize="10sp"
             android:visibility="gone" />
 
     </RelativeLayout>
