--- a/app/src/main/res/layout/activity_otheruser.xml
+++ b/app/src/main/res/layout/activity_otheruser.xml
@@ -38,7 +38,7 @@
 
     </RelativeLayout>
 
-    <android.support.v4.view.ViewPager
+    <androidx.viewpager.widget.ViewPager
         android:id="@+id/ou_viewpager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
