--- a/app/src/main/res/layout/viewpager_ou_vd.xml
+++ b/app/src/main/res/layout/viewpager_ou_vd.xml
@@ -314,7 +314,7 @@
                 </HorizontalScrollView>
             </LinearLayout>
 
-            <android.support.v7.widget.CardView
+            <androidx.cardview.widget.CardView
                 android:id="@+id/vd_card"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -366,7 +366,7 @@
                         android:textColor="@color/gray_44"
                         android:textSize="10sp" />
                 </RelativeLayout>
-            </android.support.v7.widget.CardView>
+            </androidx.cardview.widget.CardView>
         </LinearLayout>
 
     </ScrollView>
