--- a/app/src/main/res/layout/activity_followme.xml
+++ b/app/src/main/res/layout/activity_followme.xml
@@ -51,7 +51,7 @@
                 android:text="↓ ↓ 来个关注~ ↓ ↓"
                 android:textSize="12sp" />
 
-            <android.support.v7.widget.CardView
+            <androidx.cardview.widget.CardView
                 android:id="@+id/fme_card"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -130,7 +130,7 @@
                         android:textSize="13sp" />
                 </RelativeLayout>
 
-            </android.support.v7.widget.CardView>
+            </androidx.cardview.widget.CardView>
 
             <TextView
                 android:layout_width="match_parent"
