--- a/app/src/main/res/layout/activity_senddynamic.xml
+++ b/app/src/main/res/layout/activity_senddynamic.xml
@@ -71,7 +71,7 @@
                     android:layout_marginBottom="3dp"
                     android:textSize="13sp" />
 
-                <android.support.v7.widget.CardView
+                <androidx.cardview.widget.CardView
                     android:id="@+id/senddy_share_img"
                     android:layout_width="42dp"
                     android:layout_height="42dp"
@@ -88,7 +88,7 @@
                         android:layout_height="wrap_content"
                         android:src="@drawable/img_default_animation" />
 
-                </android.support.v7.widget.CardView>
+                </androidx.cardview.widget.CardView>
 
                 <TextView
                     android:id="@+id/senddy_share_title"
