--- a/app/src/main/res/layout/item_aniremind.xml
+++ b/app/src/main/res/layout/item_aniremind.xml
@@ -11,7 +11,7 @@
     android:descendantFocusability="blocksDescendants"
     android:background="?android:attr/selectableItemBackground">
 
-    <android.support.v7.widget.CardView
+    <androidx.cardview.widget.CardView
         android:id="@+id/anre_imgc"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -26,7 +26,7 @@
             android:layout_width="56dp"
             android:layout_height="56dp"
             android:src="@drawable/img_default_animation" />
-    </android.support.v7.widget.CardView>
+    </androidx.cardview.widget.CardView>
 
     <TextView
         android:id="@+id/anre_name"
