--- a/app/src/main/res/layout/viewpager_vd_vd.xml
+++ b/app/src/main/res/layout/viewpager_vd_vd.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -417,7 +416,7 @@
                 </HorizontalScrollView>
             </LinearLayout>
 
-            <android.support.v7.widget.CardView
+            <androidx.cardview.widget.CardView
                 android:id="@+id/vd_card"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -469,7 +468,7 @@
                         android:textColor="@color/gray_44"
                         android:textSize="10sp" />
                 </RelativeLayout>
-            </android.support.v7.widget.CardView>
+            </androidx.cardview.widget.CardView>
         </LinearLayout>
 
     </ScrollView>
