--- a/app/src/main/res/layout/activity_bangumi.xml
+++ b/app/src/main/res/layout/activity_bangumi.xml
@@ -12,21 +12,42 @@
         android:paddingBottom="4dp"
         android:paddingTop="10dp">
 
-        <TextView
+        <ViewFlipper
             android:id="@+id/bgm_title_title"
             android:layout_width="wrap_content"
             android:layout_height="19dp"
-            android:layout_centerHorizontal="true"
-            android:gravity="center_vertical"
-            android:text="番剧详情"
-            android:textColor="@color/white"
-            android:textSize="13sp" />
+            android:layout_centerHorizontal="true">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="番剧详情"
+                android:textColor="@color/white"
+                android:textSize="13sp"
+                android:tag="1"/>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="单话评论"
+                android:textColor="@color/white"
+                android:textSize="13sp"
+                android:tag="2"/>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="相关推荐"
+                android:textColor="@color/white"
+                android:textSize="13sp"/>
+
+        </ViewFlipper>
 
         <ImageView
             android:id="@+id/bgm_title_extraicon"
             android:layout_width="12dp"
             android:layout_height="19dp"
-            android:layout_toLeftOf="@+id/bgm_title_title"
+            android:layout_toStartOf="@+id/bgm_title_title"
             android:rotation="90"
             android:src="@drawable/icon_extra" />
 
@@ -34,7 +55,7 @@
             android:id="@+id/bgm_title_extraicon2"
             android:layout_width="12dp"
             android:layout_height="19dp"
-            android:layout_toRightOf="@+id/bgm_title_title"
+            android:layout_toEndOf="@+id/bgm_title_title"
             android:rotation="270"
             android:src="@drawable/icon_extra" />
     </RelativeLayout>
