--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -34,8 +34,8 @@
                     android:id="@+id/login_title_extraicon"
                     android:layout_width="12dp"
                     android:layout_height="19dp"
-                    android:layout_marginLeft="2dp"
-                    android:layout_toLeftOf="@id/login_title_title"
+                    android:layout_marginStart="2dp"
+                    android:layout_toStartOf="@id/login_title_title"
                     android:rotation="90"
                     android:src="@drawable/icon_extra" />
 
