--- a/app/src/main/res/layout/item_article_card_live.xml
+++ b/app/src/main/res/layout/item_article_card_live.xml
@@ -11,16 +11,17 @@
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="?android:attr/selectableItemBackground"
-        android:clickable="true"
-        android:descendantFocusability="blocksDescendants"
-        android:focusable="true"
         app:cardCornerRadius="6dp"
         app:cardElevation="0dp">
 
         <RelativeLayout
+            android:id="@+id/artcard_live_lay"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:background="?android:attr/selectableItemBackground"
+            android:descendantFocusability="blocksDescendants"
+            android:clickable="true"
+            android:focusable="true">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/artcard_live_img_lay"
