--- a/app/src/main/res/layout/activity_user.xml
+++ b/app/src/main/res/layout/activity_user.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent">
 
     <RelativeLayout
-        android:id="@+id/ou_title_layout"
+        android:id="@+id/user_title_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/mainColor"
@@ -13,7 +13,7 @@
         android:paddingTop="10dp">
 
         <ViewFlipper
-            android:id="@+id/ou_title_title"
+            android:id="@+id/user_title_title"
             android:layout_width="wrap_content"
             android:layout_height="19dp"
             android:layout_centerHorizontal="true">
@@ -21,64 +21,43 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="用户信息"
-                android:textColor="@color/white"
-                android:textSize="13sp"/>
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="用户动态"
-                android:textColor="@color/white"
-                android:textSize="13sp"/>
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="关注列表"
-                android:textColor="@color/white"
-                android:textSize="13sp"/>
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="粉丝列表"
-                android:textColor="@color/white"
-                android:textSize="13sp"/>
+                android:text="主页"
+                android:textColor="@color/white"/>
 
         </ViewFlipper>
 
         <ImageView
-            android:id="@+id/ou_title_extraicon"
+            android:id="@+id/user_title_extraicon"
             android:layout_width="12dp"
             android:layout_height="19dp"
-            android:layout_toStartOf="@+id/ou_title_title"
+            android:layout_toStartOf="@+id/user_title_title"
             android:rotation="90"
             android:src="@drawable/icon_extra" />
 
         <ImageView
-            android:id="@+id/ou_title_extraicon2"
+            android:id="@+id/user_title_extraicon2"
             android:layout_width="12dp"
             android:layout_height="19dp"
-            android:layout_toEndOf="@+id/ou_title_title"
+            android:layout_toEndOf="@+id/user_title_title"
             android:rotation="270"
             android:src="@drawable/icon_extra" />
 
     </RelativeLayout>
 
     <androidx.viewpager.widget.ViewPager
-        android:id="@+id/ou_viewpager"
+        android:id="@+id/user_viewpager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/ou_title_layout" />
+        android:layout_below="@+id/user_title_layout" />
 
     <LinearLayout
-        android:id="@+id/ou_loading"
+        android:id="@+id/user_loading"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/ou_title_layout"
+        android:layout_below="@+id/user_title_layout"
         android:background="@color/white"
         android:clickable="true"
+        android:focusable="true"
         android:gravity="center"
         android:orientation="vertical"
         android:paddingBottom="33dp">
@@ -97,12 +76,13 @@
     </LinearLayout>
 
     <LinearLayout
-        android:id="@+id/ou_noweb"
+        android:id="@+id/user_noweb"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/ou_title_layout"
+        android:layout_below="@+id/user_title_layout"
         android:background="@color/white"
         android:clickable="true"
+        android:focusable="true"
         android:gravity="center"
         android:orientation="vertical"
         android:paddingBottom="33dp"
@@ -118,6 +98,32 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="加载失败\n可能是没有网络？"
+            android:textSize="13sp" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/user_nothing"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/user_title_layout"
+        android:background="@color/white"
+        android:clickable="true"
+        android:focusable="true"
+        android:gravity="center"
+        android:orientation="vertical"
+        android:paddingBottom="33dp"
+        android:visibility="gone">
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="92dp"
+            android:padding="6dp"
+            android:src="@drawable/img_noweb" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="  什么都没找到..."
             android:textSize="13sp" />
     </LinearLayout>
 
