重做评论，支持楼中楼预览，显示表情、at、url、番剧跳转等等（点击事件还没做

--- a/app/src/main/res/layout/widget_reply_changemode.xml
+++ b/app/src/main/res/layout/widget_reply_changemode.xml
@@ -1,16 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/item_reply_sort"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:paddingLeft="22dp"
+    android:paddingRight="22dp"
+    android:gravity="center_vertical"
+    android:orientation="horizontal">
 
     <TextView
-        android:id="@+id/item_reply_sign"
-        android:layout_width="match_parent"
+        android:id="@+id/item_reply_sort_sign"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:paddingBottom="3dp"
-        android:paddingLeft="22dp"
-        android:paddingRight="22dp"
-        android:paddingTop="8dp"
-        android:textColor="@color/colorPrimaryDark" />
+        android:textColor="@color/colorPrimaryDark"
+        android:paddingTop="4dp"
+        android:paddingBottom="4dp"
+        android:layout_weight="1"/>
+
+    <TextView
+        android:id="@+id/item_reply_sort_change"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:clickable="true"
+        android:focusable="true"
+        android:gravity="center_vertical"
+        android:text="切换"
+        android:textSize="12dp" />
 </LinearLayout>
