--- a/app/src/main/res/layout/widget_reply_sendreply.xml
+++ b/app/src/main/res/layout/widget_reply_sendreply.xml
@@ -2,16 +2,29 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:orientation="horizontal"
+    android:paddingStart="22dp"
+    android:paddingEnd="22dp"
+    android:paddingTop="6dp"
+    android:paddingBottom="6dp"
+    android:background="@drawable/shape_bg_toolbar_orange">
 
-    <Button
-        android:id="@+id/vd_sendreply"
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:layout_marginLeft="50dp"
-        android:layout_marginRight="50dp"
-        android:onClick="clickSendReply"
+    <TextView
+        android:id="@+id/reply_toolbar_total"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:gravity="center_vertical"
+        android:layout_weight="1"
+        android:textStyle="bold"
+        android:textSize="15sp"
+        android:text="评论"/>
+
+    <TextView
+        android:id="@+id/reply_toolbar_sendreply"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:gravity="center_vertical"
         android:text="发送评论"
-        android:textSize="13sp" />
+        android:textSize="12sp" />
 
 </LinearLayout>
